GOMOKU PROJECT